[package]
name = "billing-system"
version = "0.1.0"
edition = "2021"

# WARNING: Replace all git links with registry packages before opening source
[dependencies.alice-architecture]
git = "https://github.com/kuintessence/alice"

[dependencies.alice-di]
git = "https://github.com/kuintessence/alice"
features = ["actix"]

[dependencies.alice-infrastructure]
git = "https://github.com/kuintessence/alice"
features = ["full"]

[dependencies.alice-web]
git = "https://github.com/kuintessence/alice"

[dependencies.content-repo]
git = "https://github.com/kuintessence/content-repo"

[dependencies.database-model]
git = "https://github.com/kuintessence/database-model"

[dependencies]
# async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1.4"
flume = "0.10"
futures = "0.3"
# data
config = { version = "0.13", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
# error
anyhow = "1.0"
thiserror = "1.0"
# render
handlebars = "4.3"
# log
tracing = "0.1"
tracing-actix-web = "0.7"
log = "0.4"
# web
actix-web = { version = "4.3", features = ["rustls"] }
actix-http = "3.3"
actix-easy-multipart = "3.0"
actix-cors = "0.6"
awc = "3.1"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
actix-rt = "2.8"
# code
derive_builder = "0.12"
# datetime
chrono = { version = "0.4", features = ["serde"] }
# number
num-traits = "0.2"
num-derive = "0.3"
rust_decimal = "1.29"
rust_decimal_macros = "1.29"
# middlewares
sea-orm = { version = "0.11", default-features = false, features = [
  "runtime-actix-rustls",
  "sqlx-postgres",
  "with-rust_decimal",
] }
redis = { version = "0.23", features = ["tokio-comp"] }
rusoto_s3 = { version = "0.48", default-features = false, features = [
  "rustls",
] }
rusoto_core = { version = "0.48", default-features = false, features = [
  "rustls",
] }
# miscellaneous
colored = "2.0"
blake3 = "1.3"
rand = "0.8"
evalexpr = "8.0"

[dev-dependencies]
mockall = "0.11"
