[package]
name = "billing-system"
version = "0.1.0"
edition = "2021"

# WARNING: Replace all git links with registry packages before opening source
[dependencies.alice-architecture]
git = "https://github.com/kuintessence/alice"

[dependencies.alice-di]
git = "https://github.com/kuintessence/alice"
features = ["actix"]

[dependencies.alice-infrastructure]
git = "https://github.com/kuintessence/alice"
features = ["full"]

[dependencies.alice-web]
git = "https://github.com/kuintessence/alice"

[dependencies.database-model]
git = "https://github.com/kuintessence/database-model"

[dependencies]
# async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
# data
config = { version = "0.13", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
# error
anyhow = "1.0"
# log
tracing = "0.1"
tracing-actix-web = "0.7"
log = "0.4"
# web
actix-web = { version = "4.3", features = ["rustls"] }
actix-easy-multipart = "3.0"
actix-cors = "0.6"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
actix-rt = "2.8"
# datetime
chrono = { version = "0.4", features = ["serde"] }
# number
rust_decimal = "1.29"
# middlewares
sea-orm = { version = "0.11", default-features = false, features = [
  "runtime-actix-rustls",
  "sqlx-postgres",
  "with-rust_decimal",
] }
# miscellaneous
colored = "2.0"
evalexpr = "8.0"
